service style image overlap bug

--- a/assets/css/serviceStyle.css
+++ b/assets/css/serviceStyle.css
@@ -228,6 +228,6 @@
         margin-top: 50%;
     } */
     #afterSServices .descImg img{
-        margin-top: 7px;
+        margin-top: 0px;
     }
 }
